--- a/css/details.css
+++ b/css/details.css
@@ -1,36 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 
-@font-face{
-    font-family: avengers;
-    src: url(../font/AVENGEANCE\ HEROIC\ AVENGER.ttf);
+@font-face {
+  font-family: avengers;
+  src: url(../font/AVENGEANCE\HEROIC\AVENGER.ttf);
 }
 
 * {
   font-family: "Raleway", sans-serif;
 }
 
-/* body {
-  background: #1d1d1d; /* Old browsers 
-  background: -moz-linear-gradient(
-    top,
-    #1d1d1d 0%,
-    #454851 100%
-  ); /* FF3.6-15 
-  background: -webkit-linear-gradient(
-    top,
-    #1d1d1d 0%,
-    #454851 100%
-  ); /* Chrome10-25,Safari5.1-6 
-  background: linear-gradient(
-    to bottom,
-    #1d1d1d 0%,
-    #454851 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ 
-  font-family: "Raleway", sans-serif;
-} */
-
-div h1{
-    font-family: avengers, 'Times New Roman', Times, serif;
+div h1 {
+  font-family: avengers, "Times New Roman", Times, serif;
 }
 
 .img-portada {
@@ -61,7 +41,6 @@ div h1{
 .grid-container {
   display: grid;
   grid-gap: 10px;
-  /* grid-template-columns: 350px 350px 350px; */
   grid-template-columns: repeat(auto-fill, 1fr);
   grid-template-areas:
     "header  header  header"
@@ -88,31 +67,24 @@ div h1{
   background-color: rgb(170, 170, 170);
 }
 
-.main-list{
-    list-style: none;
+.main-list {
+  list-style: none;
 }
 
-.link{
-    /* text-decoration: none; */
-    color: #fff;
+.link {
+  color: #fff;
 }
 
-.img-endgame{
-    border: solid 1px red;
-    height: 300px;
-    width: 200px;
+.img-endgame {
+  border: solid 1px red;
+  height: 300px;
+  width: 200px;
 }
 
-/* .img-endgame:hover{
-  height: 100%;
-  width: 100%;
-  transition: all 1s ease-in;
-} */
-
-.datos{
-    font-size: 70%;
+.datos {
+  font-size: 70%;
 }
 
-#title{
-    padding: 10px;
+#title {
+  padding: 10px;
 }
