--- a/css/reset.css
+++ b/css/reset.css
@@ -1,12 +1,17 @@
-*, *:after, *:before {
-	box-sizing: border-box;
-  }
-  
-  body {
-	margin: 0;
-	padding: 0;
-  }
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
 
-  img, embed, object, video {
-    max-width: 100%;
-  }
+body {
+  margin: 0;
+  padding: 0;
+}
+
+img,
+embed,
+object,
+video {
+  max-width: 100%;
+}
